--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,15 @@
 services:
   df-aggregator:
-    image: docker.io/dubrsl/df-aggregator:latest
+    image: docker.io/dubrsl/df-aggregator:offline
     restart: always
-    command: /root/df-aggregator/df-aggregator.py --debug --database=/var/lib/df-aggregator/databasename.db --receivers=/root/df-aggregator/receivers.txt --ip=0.0.0.0 --port=8080
-    # group-add: keep-groups
-    environment:
-      - TZ=EET
+    command: /root/df-aggregator/df-aggregator.py --debug --database=/var/lib/df-aggregator/databasename.db --ip=0.0.0.0 --port=8080
+    init: true
     ports:
       - target: 8080
         published: 8080
         mode: host
     volumes:
       - var_lib_df-aggregator:/var/lib/df-aggregator
-      - ./receivers.txt:/root/df-aggregator/receivers.txt:z
 
 volumes:
   var_lib_df-aggregator:
